Footer — z-index bug fixed

--- a/portfolio-update/src/scss/partials/_footer.scss
+++ b/portfolio-update/src/scss/partials/_footer.scss
@@ -1,4 +1,5 @@
 footer {
+  z-index: 99; // 1 less than section.prev-next
   @media only screen and (min-width: 768px){
     position: fixed;
     bottom: 0;
