--- a/portfolio-update/src/scss/partials/_projects.scss
+++ b/portfolio-update/src/scss/partials/_projects.scss
@@ -84,6 +84,8 @@
   }
 
   section.prev-next {
+    position: relative;
+    z-index: 100;
     i.arrow {
       font-size: 1.8rem;
       padding: 0 7.5px;
